exp4- switch交换机/code/bug.txt
root@ubuntu:/home/wang/networking/exp-4_exchange/me# make
gcc -c -g -Wall -Iinclude main.c -o main.o
gcc -c -g -Wall -Iinclude mac.c -o mac.o
mac.c: In function ‘lookup_port’:
mac.c:53:9: warning: return from incompatible pointer type [-Wincompatible-pointer-types]
  return entry;
         ^
mac.c: In function ‘insert_mac_port’:
mac.c:67:3: error: expected ‘;’ before ‘entry’
   entry->next = NULL;
   ^
mac.c:86:45: error: ‘mac_port_entry’ undeclared (first use in this function)
    entry = (mac_port_entry_t*)malloc(sizeof(mac_port_entry));
                                             ^
mac.c:86:45: note: each undeclared identifier is reported only once for each function it appears in
mac.c:90:4: error: expected ‘;’ before ‘entry’
    entry->next = NULL;
    ^
mac.c:95:9: warning: ‘return’ with a value, in function returning void
  return entry;
         ^
Makefile:16: recipe for target 'mac.o' failed
make: *** [mac.o] Error 1
root@ubuntu:/home/wang/networking/exp-4_exchange/me# subl
root@ubuntu:/home/wang/networking/exp-4_exchange/me# make
gcc -c -g -Wall -Iinclude mac.c -o mac.o
mac.c: In function ‘lookup_port’:
mac.c:53:9: warning: return from incompatible pointer type [-Wincompatible-pointer-types]
  return entry;
         ^
gcc -c -g -Wall -Iinclude packet.c -o packet.o
gcc -c -g -Wall -Iinclude hash.c -o hash.o
gcc  main.o mac.o packet.o hash.o -o switch -lpthread 
root@ubuntu:/home/wang/networking/exp-4_exchange/me# 
